--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "github:hostinger-bot/baileys",
-    "@adiwajshing/keyed-db": "^0.2.4",
+    "@adiwajshing/keyed-db": "Latest",
     "@bochilteam/scraper": "^3.0.0",
     "awesome-phonenumber": "^2.64.0",
     "axios": "^0.24.0",
-    "chalk": "^4.1.2",
+    "chalk": "Latest",
     "cheerio": "^1.0.0-rc.10",
     "child_process": "^1.0.2",
     "cookie": "^0.5.0",
@@ -47,7 +47,7 @@
     "jsdom": "^16.4.0",
     "lowdb": "^2.1.0",
     "mongoose": "^6.2.1",
-    "moment-timezone": "^0.5.34",
+    "moment-timezone": "Latest",
     "ms": "^2.1.3",
     "mumaker": "^1.0.0",
     "node-cron": "^3.0.0",
@@ -57,7 +57,7 @@
     "path": "^0.12.7",
     "perf_hooks": "0.0.1",
     "pino": "^7.0.5",
-    "qrcode-terminal": "^0.12.0",
+    "qrcode-terminal": "latest",
     "request": "^2.88.2",
     "remove.bg": "^1.3.0",
     "scrape-primbon": "^1.1.0",
