--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@bochilteam/scraper": "^3.0.0",
     "awesome-phonenumber": "^2.64.0",
     "axios": "^0.24.0",
-    "chalk": "Latest",
+    "chalk": "^4.1.1",
     "cheerio": "^1.0.0-rc.10",
     "child_process": "^1.0.2",
     "cookie": "^0.5.0",
