--- a/package.json
+++ b/package.json
@@ -22,50 +22,50 @@
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "github:hostinger-bot/baileys",
-    "@adiwajshing/keyed-db": "Latest",
-    "@bochilteam/scraper": "^3.0.0",
-    "awesome-phonenumber": "^2.64.0",
-    "axios": "^0.24.0",
+    "@adiwajshing/keyed-db": "latest",
+    "@bochilteam/scraper": "latest",
+    "awesome-phonenumber": "latest",
+    "axios": "latest",
     "chalk": "^4.1.1",
-    "cheerio": "^1.0.0-rc.10",
-    "child_process": "^1.0.2",
-    "cookie": "^0.5.0",
-    "crypto": "^1.0.1",
-    "tod-api": "^1.0.5",
-    "file-type": "^16.5.3",
-    "lolcatjs": "^2.4.1",
-    "fluent-ffmpeg": "^2.1.2",
+    "cheerio": "latest",
+    "child_process": "latest",
+    "cookie": "latest",
+    "crypto": "latest",
+    "tod-api": "latest",
+    "file-type": "^16.5.4",
+    "lolcatjs": "latest",
+    "fluent-ffmpeg": "latest",
     "fs": "0.0.1-security",
-    "fs-extra": "^10.0.0",
-    "got": "^11.8.3",
-    "emoji-api": "^1.0.2",
-    "g-i-s": "^2.1.6",
-    "google-it": "^1.6.2",
-    "human-readable": "^0.2.1",
-    "hxz-api": "^1.0.1",
-    "jimp": "^0.16.1",
-    "jsdom": "^16.4.0",
+    "fs-extra": "latest",
+    "got": "latest",
+    "emoji-api": "latest",
+    "g-i-s": "latest",
+    "google-it": "latest",
+    "human-readable": "latest",
+    "hxz-api": "latest",
+    "jimp": "latest",
+    "jsdom": "latest",
     "lowdb": "^2.1.0",
-    "mongoose": "^6.2.1",
-    "moment-timezone": "Latest",
-    "ms": "^2.1.3",
-    "mumaker": "^1.0.0",
-    "node-cron": "^3.0.0",
-    "node-fetch": "^2.6.1",
-    "node-webpmux": "^3.1.0",
-    "os": "^0.1.2",
-    "path": "^0.12.7",
-    "perf_hooks": "0.0.1",
-    "pino": "^7.0.5",
+    "mongoose": "latest",
+    "moment-timezone": "latest",
+    "ms": "latest",
+    "mumaker": "latest",
+    "node-cron": "latest",
+    "node-fetch": "^2.6.7",
+    "node-webpmux": "latest",
+    "os": "latest",
+    "path": "latest",
+    "perf_hooks": "latest",
+    "pino": "latest",
     "qrcode-terminal": "latest",
-    "request": "^2.88.2",
-    "remove.bg": "^1.3.0",
-    "scrape-primbon": "^1.1.0",
-    "util": "^0.12.4",
-    "xfarr-api": "^1.0.2",
-    "yargs": "^17.2.1",
-    "ytdl-core": "^4.11.2",
-    "yt-search": "^2.10.2"
+    "request": "latest",
+    "remove.bg": "latest",
+    "scrape-primbon": "latest",
+    "util": "latest",
+    "xfarr-api": "latest",
+    "yargs": "latest",
+    "ytdl-core": "latest",
+    "yt-search": "latest"
   },
   "directories": {
     "lib": "lib",
