--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "TioXd",
   "license": "MIT",
   "dependencies": {
-   "@adiwajshing/baileys": "github:amiruldev20/baileys",
+   "@adiwajshing/baileys": "npm:@ferdiz-afk/baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^3.0.0",
     "awesome-phonenumber": "^2.64.0",
@@ -43,7 +43,7 @@
     "google-it": "^1.6.2",
     "human-readable": "^0.2.1",
     "hxz-api": "^1.0.1",
-    "jimp": "^0.16.1",
+    "jimp": "^0.22.7",
     "jsdom": "^16.4.0",
     "lowdb": "^2.1.0",
     "mongoose": "^6.2.1",
