--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Hoream-MD",
-  "version": "4.22.9",
+  "version": "2.0",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "index.js",
   "type": "commonjs",
@@ -52,6 +52,7 @@
     "mumaker": "^1.0.0",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
+    "fluent-ffmpeg": "^2.1.2",
     "node-webpmux": "^3.1.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
@@ -74,10 +75,10 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BOTCAHX/RTXZY-MD.git"
+    "url": "git+https://github.com/BOTCAHX/Hoream-MD.git"
   },
   "bugs": {
-    "url": "https://github.com/BOTCAHX/RTXZY-MD/issues"
+    "url": "https://github.com/BOTCAHX/Hoream-MD/issues"
   },
-  "homepage": "https://github.com/BOTCAHX/RTXZY-MD#readme"
+  "homepage": "https://github.com/BOTCAHX/Hoream-MD#readme"
 }
