--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@adiwajshing/baileys": "npm:@ferdiz-afk/baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^3.0.0",
+    "@vitalets/google-translate-api": "^9.0.0",
     "awesome-phonenumber": "^2.64.0",
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
