--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "util": "^0.12.4",
     "xfarr-api": "^1.0.2",
     "yargs": "^17.2.1",
-    "ytdl-core": "4.9.1",
+    "ytdl-core": "latest",
     "yt-search": "^2.10.2"
   },
   "directories": {
